2014-12-19  Alan Lawrence  <alan.lawrence@arm.com>

	* config/aarch64/aarch64.md (<optab><mode>3, one_cmpl<mode>2):
	Add SIMD-register variant.
	* config/aarch64/iterators.md (Vbtype): Add value for SI.

2014-12-19  Alan Lawrence  <alan.lawrence@arm.com>

	* config/aarch64/aarch64.md (subdi3, adddi3_aarch64): Don't penalize
	SIMD reg variant.

2014-12-19  Martin Liska  <mliska@suse.cz>

	PR ipa/63569
	* ipa-icf-gimple.c (func_checker::compare_operand): Add missing
	comparison for volatile flag.

2014-12-19  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* doc/invoke.texi (ARM options): Remove mention of Advanced RISC
	Machines.

2014-12-19  Xingxing Pan  <xxingpan@marvell.com>

	* config/arm/cortex-a9-neon.md (cortex_a9_neon_vmov): Change
	reservation to cortex_a9_neon_dp.

2014-12-19  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.c (prepare_move_operands): Split HI/QImode load/store
	to two move insns via r0.

2014-12-19  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/predicates.md (arith_or_int_operand): New predicate.
	* config/sh/sh.md (addsi3): Use arith_or_int_operand for operand 2.
	Return fail if operands[0] and operands[1] are overlap when
	operands[2] is integer constant.
	(*addsi3_compact): Make it define_insn_and_split which splits
	reg0 := reg1 + constant to reg0 = constant and reg0 := reg0 + reg1.

2014-12-19  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh-protos.h (sh_movsf_ie_ra_split_p): Declare.
	* config/sh/sh.c (sh_movsf_ie_ra_split_p): New function.
	* config/sh/sh.md (movsi_ie): Use "mr" constraint for the 8-th
	altarnative of operand 0.
	(movesf_ie): Use "X" constraint instead of "Bsc".
	(movsf_ie_ra): New insn_and_split.
	(movsf): Use movsfie_ra when lra_in_progress is true.

2014-12-19  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/predicates.md (general_movsrc_operand): Allow only
	valid plus address expressions.
	(general_movdst_operand): Likewise.
	(t_reg_operand): Allow (zero_extend (reg t)).